# InputParser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: basic.yml  compiles.yml
include/input/: constraint.hpp  local_type_traits.hpp  parser.hpp  parsing_error.hpp
include/input/option/: base_option.hpp  compound_option.hpp  flag_option.hpp  single_option.hpp
include/input_parser/: constraint.hpp  local_concepts.hpp  local_type_traits.hpp  parser.hpp  parsing_error.hpp
include/input_parser/option/: base_option.hpp  compound_option.hpp  flag_option.hpp  single_option.hpp
src/: parser.cpp
src/include/: constraint.hpp  option.hpp  parser.hpp  parsing_error.hpp  transformation.hpp
src/include/option/: base_option.hpp  compound_option.hpp  flag_option.hpp  multiple_option.hpp  single_option.hpp
src/lib/: option.cpp  parser.cpp
src/lib/option/: base_option.cpp  compound_option.cpp  flag_option.cpp  multiple_option.cpp  single_option.cpp
src/option/: base_option.cpp  compound_option.cpp  flag_option.cpp  single_option.cpp
test/: CMakeLists.txt  constraint.test.cpp  parser.test.cpp  parsing_error.test.cpp
test/option/: base_option.test.cpp
